--- a/application.properties
+++ b/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/User
 spring.datasource.username=root
-spring.datasource.password=Chinni@1997
+spring.datasource.password=abcd
 spring.jpa.hibernate.ddl-auto=update
 
 logging.level.org.hibernate.SQL=DEBUG
